--- a/BE/Searching.BE.Service/Searching.BE.Service.csproj
+++ b/BE/Searching.BE.Service/Searching.BE.Service.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IWCFRESTService.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
