--- a/DAL/Searching.DAL.Main/Searching.DAL.Main.csproj
+++ b/DAL/Searching.DAL.Main/Searching.DAL.Main.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="Logics.BD\AnnouncingFilter.cs" />
     <Compile Include="Logics.BD\AnnouncingFunction.cs" />
     <Compile Include="Logics.BD\FavoriteAnnouncingFunction.cs" />
@@ -49,6 +50,12 @@
     <Compile Include="Logics.BD\SelectedAnnouncingFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlAccess\SqlAccess.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Searching.Shared.ModelClasses\Searching.Shared.ModelClasses.csproj">
+      <Project>{80f00a62-772a-4c74-bb9b-ac4f38db1469}</Project>
+      <Name>Searching.Shared.ModelClasses</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
