--- a/UI/Searching.UI.WinClient/Searching.UI.WinClient.csproj
+++ b/UI/Searching.UI.WinClient/Searching.UI.WinClient.csproj
@@ -130,7 +130,7 @@
     <Compile Include="ViewModels\CategoriesViewModel.cs" />
     <Compile Include="ViewModels\FilterViewModel.cs" />
     <Compile Include="ViewModels\RetCategoriesViewModel.cs" />
-    <Compile Include="View\param.cs" />
+    <Compile Include="View\Mainpage_param.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
